--- a/src/api/package.json
+++ b/src/api/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongodb": "^4.8.1",
+    "mongoose": "^6.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
   }
