--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-
+    "axios": "^0.27.2",
     "vue": "^3.2.37"
   },
   "devDependencies": {
