--- a/src/api/package.json
+++ b/src/api/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "author": "",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
@@ -17,6 +18,7 @@
     "http-errors": "^2.0.0",
     "mongoose": "^6.5.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^2.0.19"
   }
 }
