--- a/src/api/package.json
+++ b/src/api/package.json
@@ -14,8 +14,10 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "file-system": "^2.2.2",
     "gridfs-stream": "^1.1.1",
     "http-errors": "^2.0.0",
+    "mongodb": "^4.8.1",
     "mongoose": "^6.5.0",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
